--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.8.1",
-    "fastclick": "^1.0.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-touch": "^2.0.0-beta.4"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
